[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD/crosshair.png" type="Texture" id=1]
[ext_resource path="res://scripts/masterscript.gd" type="Script" id=2]
[ext_resource path="res://veincalc/icon.png" type="Texture" id=3]
[ext_resource path="res://HUD/border.png" type="Texture" id=5]
[ext_resource path="res://veincalc/ring-map.png" type="Texture" id=6]

[sub_resource type="NoiseTexture" id=4]
width = 500
height = 500

[sub_resource type="Theme" id=1]
/styles/xz = null

[node name="Control" type="Control"]
margin_top = -5.0
margin_bottom = -5.0
script = ExtResource( 2 )
calibration = Vector2( -2, -2 )
segment_length = 1

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 555, 570 )
scale = Vector2( 0.484374, 0.484374 )
texture = ExtResource( 3 )

[node name="timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Background" type="Sprite" parent="."]

[node name="mapsmall" type="TextureRect" parent="."]
margin_left = 580.0
margin_top = 35.0
margin_right = 964.0
margin_bottom = 419.0
rect_clip_content = true
texture = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="cross" type="Sprite" parent="mapsmall"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="PanelMap2" type="Sprite" parent="."]
position = Vector2( 575, 30 )
scale = Vector2( 0.759615, 0.759615 )
texture = ExtResource( 5 )
centered = false

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_left = 660.0
margin_top = 125.0
margin_right = 700.0
margin_bottom = 165.0
rect_clip_content = true

[node name="map" type="TextureRect" parent="."]
margin_left = 25.0
margin_top = 40.0
margin_right = 525.0
margin_bottom = 540.0
texture = SubResource( 4 )
expand = true
stretch_mode = 4

[node name="PanelMap" type="Sprite" parent="map"]
z_index = 100
texture = ExtResource( 5 )
offset = Vector2( 250, 250 )

[node name="cross" type="Sprite" parent="map"]
position = Vector2( 250, 250 )
texture = ExtResource( 1 )

[node name="CalculateButton" type="Button" parent="."]
margin_left = 905.0
margin_top = 485.0
margin_right = 950.0
margin_bottom = 580.0
toggle_mode = true
text = "SCN"
clip_text = true
icon_align = 1

[node name="XBox" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 555.0
margin_right = 530.0
margin_bottom = 583.0

[node name="ScrollX" type="HScrollBar" parent="XBox"]
margin_right = 510.0
margin_bottom = 12.0
max_value = 3000.0
step = 1.0
value = 200.0
rounded = true

[node name="ScrollX2" type="HScrollBar" parent="XBox"]
margin_top = 16.0
margin_right = 510.0
margin_bottom = 28.0
theme = SubResource( 1 )
step = 1.0
value = 50.0
rounded = true

[node name="YBox" type="HBoxContainer" parent="."]
margin_left = 540.0
margin_top = 35.0
margin_right = 568.0
margin_bottom = 545.0

[node name="ScrollY" type="VScrollBar" parent="YBox"]
margin_right = 12.0
margin_bottom = 510.0
max_value = 3000.0
step = 1.0
value = 200.0
rounded = true

[node name="ScrollY2" type="VScrollBar" parent="YBox"]
margin_left = 16.0
margin_right = 28.0
margin_bottom = 510.0
step = 1.0
value = 50.0
rounded = true

[node name="PanelCoordinates" type="ColorRect" parent="."]
margin_left = 905.0
margin_top = 430.0
margin_right = 950.0
margin_bottom = 475.0
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="posBox" type="VBoxContainer" parent="."]
margin_left = 905.0
margin_top = 435.0
margin_right = 950.0
margin_bottom = 470.0
alignment = 1

[node name="posX" type="Label" parent="posBox"]
margin_top = 1.0
margin_right = 45.0
margin_bottom = 15.0
align = 1
valign = 1

[node name="posY" type="Label" parent="posBox"]
margin_top = 19.0
margin_right = 45.0
margin_bottom = 33.0
align = 1
valign = 1

[node name="CenterContainer" type="Control" parent="."]
margin_left = 590.0
margin_top = 430.0
margin_right = 590.0
margin_bottom = 430.0
grow_horizontal = 0
grow_vertical = 0

[node name="PanelMinerals" type="ColorRect" parent="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 300.0
margin_bottom = 150.0
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="MineralsContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 60.0
margin_top = 145.0
margin_right = 240.0
margin_bottom = 145.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 180, 0 )
rect_clip_content = true

[connection signal="pressed" from="CalculateButton" to="." method="_on_CalculateButton_pressed"]
